--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 <body>
 <h1> hi humna</body> 
-<h2>No hu
+<h2>bye hamna</body>
+<h1>wait hamna</body>
+<h2>stop hamna</body>
+<h3>finally bye bye hamna</body>
 
 
